# rlooper_sim_python

./: .gitignore  MANIFEST.in  Makefile  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_GUIDE.md  Snakefile  cli.py  config.yaml  create_release.py  dag_fallback.py  energy.csv  example.fasta  gene.py  main.py  model.py  plot_dag.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run_workflow.py  setup.bat  setup.py  setup.sh  simulation.py  version.py
.github/workflows/: release.yml
input/: example_short.fasta
